cv-services-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: cv-service-load-balancer
spec:
  type: LoadBalancer
  selector:
    app: web
    name: cv-pod
  ports:
    - port: 80
      targetPort: 80
