cv-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: cv-service
spec:
  type: NodePort
  selector:
    app: web
    name: cv-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30036
