cv-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cv-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: subhandp.cv
    http:
      paths:
      - path: /
        backend:
          serviceName: cv-service
          servicePort: 80
